<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Workout"

        android:textColor="#216d21"
        android:id="@+id/textView4"
        android:textSize="80sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/answer"
        android:layout_below="@+id/equation"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginTop="83dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/q1p"
        android:textSize="40sp"
        android:id="@+id/equation"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:id="@+id/check"
        android:layout_below="@+id/answer"
        android:layout_alignRight="@+id/NextQuestion"
        android:layout_alignEnd="@+id/NextQuestion"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/NextQuestion"
        android:layout_below="@+id/check"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/menu"
        android:onClick="onButtonClick" />


</RelativeLayout>