<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mDash"

        android:textColor="#216d21"
        android:id="@+id/textView4"
        android:textSize="70sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/m10"
        android:id="@+id/meter_Count"
        android:layout_below="@+id/textView4"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="37dp"
        android:textSize="40sp"
        android:textColor="#216d21"
        android:layout_above="@+id/workout_start"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/answer"
        android:hint="Answer"
        android:layout_below="@+id/equation"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/q1p"
        android:textSize="40sp"
        android:id="@+id/equation"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"

        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/meter_Count"
        android:layout_alignEnd="@+id/meter_Count" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/duration"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/chronometer"
        android:layout_toStartOf="@+id/chronometer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignTop="@+id/answer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:onClick="onButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/menu"
        android:onClick="onButtonClick"
        android:layout_below="@+id/submit"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignStart="@+id/submit" />


</RelativeLayout>